--- a/_config.yml
+++ b/_config.yml
@@ -80,3 +80,23 @@ deploy:
   type: git
   repository: git@github.com:pangjunpeng/pangjunpeng.github.io.git
   branch: master
+
+# All Article
+jsonContent:
+    meta: false
+    pages: false
+    posts:
+      title: true
+      date: true
+      path: true
+      text: false
+      raw: false
+      content: false
+      slug: false
+      updated: false
+      comments: false
+      link: false
+      permalink: false
+      excerpt: false
+      categories: false
+      tags: true
