--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -6,10 +6,10 @@ menu:
 
 # SubNav
 subnav:
-  github: "#"
-  weibo: "#"
-  rss: "#"
-  zhihu: "#"
+  github: "https://github.com/pangjunpeng"
+  weibo: "https://weibo.com/pangjunpeng"
+  #rss: "#"
+  zhihu: "https://zhihu.com/people/eaeaqew"
   #qq: "#"
   #weixin: "#"
   #jianshu: "#"
@@ -33,17 +33,17 @@ root: /
 # Content
 
 # 文章太长，截断按钮文字
-excerpt_link: more
+excerpt_link: 展开全文
 # 文章卡片右下角常驻链接，不需要请设置为false
-show_all_link: '展开全文'
+show_all_link: false
 # 数学公式
 mathjax: false
 # 是否在新窗口打开链接
-open_in_new: false
+open_in_new: true
 
 # 打赏
 # 打赏type设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
-reward_type: 2
+reward_type: 0
 # 打赏wording
 reward_wording: '谢谢你请我吃糖果'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
@@ -68,7 +68,7 @@ google_analytics: ''
 favicon: /favicon.png
 
 #你的头像url
-avatar:
+avatar: /avatar.jpg
 
 #是否开启分享
 share_jia: true
@@ -102,7 +102,7 @@ style:
   # 头像上面的背景颜色
   header: '#4d4d4d'
   # 右滑板块背景
-  slider: 'linear-gradient(200deg,#a0cfe4,#e8c37e)'
+  slider: 'linear-gradient(200deg,#e4a0e2,#a77ee8)'
 
 # slider的设置
 slider:
@@ -116,15 +116,10 @@ slider:
 #  friends: false
 smart_menu:
   innerArchive: '所有文章'
-  friends: '友链'
+  #friends: '友链'
   aboutme: '关于我'
 
-friends:
-  友情链接1: http://localhost:4000/
-  友情链接2: http://localhost:4000/
-  友情链接3: http://localhost:4000/
-  友情链接4: http://localhost:4000/
-  友情链接5: http://localhost:4000/
-  友情链接6: http://localhost:4000/
+#friends:
+  
 
-aboutme: 很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
+aboutme:    一个人的命运啊，当然要靠自我奋斗 <br/>但是也要考虑到历史的行程。<br/><a href="https://pangjunpeng.github.io/2018/03/21/%E9%87%8D%E6%8B%BE%E8%8D%92%E5%BA%9F%E4%B8%80%E5%B9%B4%E7%9A%84%E5%8D%9A%E5%AE%A2/">关于我</a>
