--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ skip_render:
 - README.md
 - baidu_verify_qfCRKp66Ye.html
 - google58b34a5c47978508.html
+- myWheels/**
 
 # Writing
 new_post_name: :title.md # File name of new posts
