--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ skip_render:
 - baidu_verify_qfCRKp66Ye.html
 - google58b34a5c47978508.html
 - myWheels/**
+- resume/**
 
 # Writing
 new_post_name: :title.md # File name of new posts
