--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ skip_render:
 - google58b34a5c47978508.html
 - myWheels/**
 - resume/**
+- mockLogin/**
 
 # Writing
 new_post_name: :title.md # File name of new posts
