更换图片露囧,圈小猫改为iframe

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ skip_render:
 - README.md
 - baidu_verify_qfCRKp66Ye.html
 - google58b34a5c47978508.html
+- catch-the-cat.js
+- phaser.min.js
+- assets/**
 - myWheels/**
 - resume/**
 - mockLogin/**
